--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "pomodoro",
   "version": "1.0.0",
   "description": "\"Pomodoro app\"",
-  "main": "src/main.js",
+  "main": "dist/main.js",
   "scripts": {
-    "start": "electron ."
+    "build": "tsc",
+    "start": "npm run build && electron ."
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/ddrppx/pomodoro#readme",
   "devDependencies": {
-    "electron": "^23.2.1"
+    "electron": "^23.2.1",
+    "typescript": "^5.0.3"
   }
 }
